			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

21-Jan-2005
~~~~~~~~~~~
Bugfix: If, when building, objcopy exits with an error then don't strip
	the binary (Stephen Watson).

20-Jan-2005
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

18-Jan-2005
~~~~~~~~~~~
Bugfix: Don't show the permissions in the properties window for
        symbolic links as they don't behave as you might expect
	(Stephen Watson, reported by Max Power).

16-Jan-2005
~~~~~~~~~~~
Fixed some spelling errors and made some messages easier to translate
(Vincent Lefèvre).

15-Jan-2005 (Release 2.1.5)
~~~~~~~~~~~
Bugfix: An extra arrow had appeared in the Find box (Thomas Leonard).
Bugfix: We were inconsistent about when filenames were escaped. Eg, creating
	a directory called "a%20b" actually created "a b" (Thomas Leonard).
Bugfix: Panel icons with no label displayed an empty tooltip (Thomas Leonard).
Bugfix: Selecting a pinboard icon only redrew the text path (Thomas Leonard).

13-Jan-2005
~~~~~~~~~~~
Updated Japanese translation (Hiroaki Tanaka).

12-Jan-2005
~~~~~~~~~~~
Slight change to install script for when the installation directory is
on an NFS mount (Stephen Watson).

10-Jan-2005
~~~~~~~~~~~
Can now disable use of extended attributes (Stephen Watson).

08-Jan-2005
~~~~~~~~~~~
Allow renaming multiple files at once. This opens the Bulk Rename window,
which allows manual editing of the names, as well as regular-expression
based transformations (Thomas Leonard).

Rename buttons in Set Run Action box so that they make sense (Thomas Leonard;
reported by Jonatan Liljedahl).

Bugfix: Filer would crash when the screen was resized if there was no
	pinboard (Thomas Leonard).
Bugfix: Xinerama support had broken panel repositioning in response to
	XRANDR screen resizing events (Thomas Leonard).

03-Jan-2005
~~~~~~~~~~~
Set the name for filer windows to 'rox-filer'. This allows theming the fonts
just for ROX-Filer (Lucas Hazel).

23-Dec-2004
~~~~~~~~~~~