@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+22-Jan-2005
+~~~~~~~~~~~
+Updated French manual translation (Arnaud Calvo).
+
 21-Jan-2005
 ~~~~~~~~~~~
 Bugfix: If, when building, objcopy exits with an error then don't strip
